Fix background zoom issue by explicitly stretching width and height

--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@ body {
   width: 100%;
   height: 100%;
   background-image: url('/Background_image.jpeg');
-  background-size: cover;
+  background-size: 100% 100%;
   background-position: center;
   background-repeat: no-repeat;
   z-index: 1;
